# fastapi-rag-chatbot

./: .dockerignore  .gitignore  Dockerfile  README.md  config.toml  docker-compose.yml  pyproject.toml
.github/workflows/: python-ci.yml
fastapi_rag_chatbot/: dependencies.py  main.py
fastapi_rag_chatbot/api/: conversation.py  routes.py  vector_store.py
fastapi_rag_chatbot/schemas/: models.py
tests/: test_routes.py
